--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,3 +7,6 @@ workflows:
   lint_pack-validate_publish-dev:
     jobs:
       - orb-tools/lint
+      - orb-tools/pack:
+          requires:
+            - orb-tools/lint
