Does not need to store to artifact

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,7 @@ workflows:
           checkout: true
           orb-name: masutaka/tfupdate
           orb-path: orb.yml
+          store-artifact: false
           validate: true
           requires:
             - orb-tools/lint
