--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,3 +24,12 @@ workflows:
           filters:
             branches:
               ignore: master
+      - orb-tools/trigger-integration-workflow:
+          name: trigger-integration-master
+          ssh-fingerprints: 9e:01:82:b2:99:b1:24:0b:0c:e7:c3:64:2f:0b:43:f1
+          tag: master
+          requires:
+            - orb-tools/publish-dev
+          filters:
+            branches:
+              only: master
