--- a/src/examples/tfupdate_and_create_pull_request.yml
+++ b/src/examples/tfupdate_and_create_pull_request.yml
@@ -22,9 +22,11 @@ usage:
       - tfupdate/setup:
           git_user_name: 'Your Name'
           git_user_email: 'you@example.com'
-      - tfupdate/terraform
+      - tfupdate/terraform:
+          assignees: 'alice'
       - tfupdate/provider:
           provider_name: 'aws'
+          assignees: 'alice,bob'
 
   workflows:
     version: 2
