--- a/src/commands/terraform.yml
+++ b/src/commands/terraform.yml
@@ -9,6 +9,9 @@ parameters:
     description: A base branch name to update
     type: string
     default: master
+  assignees:
+    description: A comma-separated list (no spaces around the comma) of GitHub handles to assign to this pull request
+    type: string
 
 steps:
   - run:
@@ -28,6 +31,10 @@ steps:
           else
             git commit -m "$UPDATE_MESSAGE"
             PULL_REQUEST_BODY="For details see: https://github.com/hashicorp/terraform/releases"
-            git push origin HEAD && hub pull-request -m "$UPDATE_MESSAGE" -m "$PULL_REQUEST_BODY" -b << parameters.base_branch >>
+            if [ -n "<< parameters.assignees >>" ]; then
+              git push origin HEAD && hub pull-request -m "$UPDATE_MESSAGE" -m "$PULL_REQUEST_BODY" -b << parameters.base_branch >> -a "<< parameters.assignees >>"
+            else
+              git push origin HEAD && hub pull-request -m "$UPDATE_MESSAGE" -m "$PULL_REQUEST_BODY" -b << parameters.base_branch >>
+            fi
           fi
         fi
