:gear: Display GitHub URL on https://circleci.com/developer/orbs/orb/masutaka/tfupdate

--- a/src/@orb.yml
+++ b/src/@orb.yml
@@ -2,4 +2,6 @@ version: 2.1
 
 description: |
   CircleCI orb for tfupdate.
-  https://github.com/masutaka/circleci-tfupdate-orb
+
+display:
+  source_url: https://github.com/masutaka/circleci-tfupdate-orb
