--- a/src/commands/provider.yml
+++ b/src/commands/provider.yml
@@ -43,10 +43,11 @@ steps:
           else
             git commit -m "$UPDATE_MESSAGE"
             if [ "<< parameters.repo_name >>" ]; then
-              PULL_REQUEST_BODY="For details see: https://github.com/<< parameters.repo_name >>/releases\nPlease execute \`\$ terraform init -upgrade\` and commit.:pray:"
+              RELEASE_URL="https://github.com/<< parameters.repo_name >>/releases"
             else
-              PULL_REQUEST_BODY="For details see: https://github.com/hashicorp/terraform-provider-<< parameters.provider_name >>/releases\nPlease execute \`\$ terraform init -upgrade\` and commit.:pray:"
+              RELEASE_URL="https://github.com/hashicorp/terraform-provider-<< parameters.provider_name >>/releases"
             fi
+            PULL_REQUEST_BODY="For details see: $RELEASE_URL\nPlease execute \`\$ terraform init -upgrade\` and commit.:pray:"
             if [ -n "<< parameters.assignees >>" ]; then
               git push origin HEAD && hub pull-request -m "$UPDATE_MESSAGE" -m "$PULL_REQUEST_BODY" -b << parameters.base_branch >> -a "<< parameters.assignees >>"
             else
