--- a/src/commands/provider.yml
+++ b/src/commands/provider.yml
@@ -47,7 +47,7 @@ steps:
             else
               RELEASE_URL="https://github.com/hashicorp/terraform-provider-<< parameters.provider_name >>/releases"
             fi
-            PULL_REQUEST_BODY="For details see: $RELEASE_URL\nPlease execute \`\$ terraform init -upgrade\` and commit.:pray:"
+            PULL_REQUEST_BODY="For details see: $RELEASE_URL<br>Please execute \`\$ terraform init -upgrade\` and commit.:pray:"
             if [ -n "<< parameters.assignees >>" ]; then
               git push origin HEAD && hub pull-request -m "$UPDATE_MESSAGE" -m "$PULL_REQUEST_BODY" -b << parameters.base_branch >> -a "<< parameters.assignees >>"
             else
